# 2bluerings

./: LICENSE.md  README.md
backend/: .gitignore  .pylintrc  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01bd71a33747_add_position_cols_to_context_nodes.py  04cff13a6b12_add_vectors_table.py  0ab3c17d253b_add_users.py  0d87a2d628be_add_chunks_table_instead_of_vectors.py  14467fa0cb40_make_user_id_not_null.py  3487afe1fe32_add_user_id_to_integrations.py  43300531862a_update_chunks_table.py  a3b0e571a39c_add_settings_column_to_user_model.py  a842e4b9f39f_update_context_nodes.py  b73335445677_add_pgvector.py  b9336137abf7_create_integrations_table.py  c7dd0e9b5d3e_projects_user_id_should_not_be_null.py  d0ae9f60fa03_create_projects_table.py  e1b01cf17c8c_add_threads.py  f073773041b4_create_context_nodes.py  f42c9860b0b6_add_episode_uuids_to_context_nodes.py  ff52fcdd50ae_add_user_id_to_projects.py
backend/src/: config.py  main.py  setup.py
backend/src/api/: router.py
backend/src/cortex/: aiohttp.py  embeddor.py  graphiti.py  llm.py  main.py  prompts.py  protocols.py  title_generator.py  ws_token_streamer.py
backend/src/db/: engine.py  session.py
backend/src/models/: __init__.py  application_model.py  chunk.py  context_node.py  integration.py  project.py  thread.py  user.py
backend/src/repositories/: application_repository.py  chunk.py  context_node.py  integration.py  project.py  thread.py  user.py
backend/src/schemas/: application_schema.py  context_node.py  integration.py  project.py  thread.py  user.py
(+80 files in other folders)
