[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "2 Blue Rings",email = "contact.2.blue.rings@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "neo4j (>=5.28.1,<6.0.0)",
    "langgraph (>=0.5.3,<0.6.0)",
    "langchain[anthropic,google-genai,openai] (>=0.3.27,<0.4.0)",
    "atlassian-python-api (>=4.0.4,<5.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langsmith (>=0.4.8,<0.5.0)",
    "langchain-groq (>=0.3.6,<0.4.0)",
    "langchain-tavily (>=0.2.10,<0.3.0)",
    "graphiti-core[anthropic,google-genai,groq] (>=0.18.0,<0.19.0)",
    "chonkie[semantic] (>=1.1.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "aioconsole (>=0.8.1,<0.9.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.23,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
